--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.7",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~50.0.0-preview.4",
+    "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.0",
+    "expo-linear-gradient": "~12.7.0",
+    "react-native-reanimated": "~3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
